--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
         flex: 1 1 100%;
         max-width: 100%;
       }
+      /* Centraliza o botão de exportar no card de exportação */
+      .card.export-card button {
+        display: block;
+        margin: 0 auto;
+      }
     }
 
     @media (max-width: 480px) {
